@@ -47,6 +47,8 @@ static struct {
   { "1.3.36.3.3.1.2",       GCRY_MD_RMD160 },
   /* RSADSI digestAlgorithm MD5 */
   { "1.2.840.113549.2.5",   GCRY_MD_MD5 },
+  /* GNU.digestAlgorithm TIGER */
+  { "1.3.6.1.4.1.11591.12.2", GCRY_MD_TIGER },
   {NULL}
 };
 
